<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@color/colorPrimaryDark">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:title="Net Hesap"
            app:titleEnabled="true"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:buttonGravity="top"></android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:orientation="vertical"
            tools:context="com.nethesap.kaancaliskan.nethesap.MainActivity">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dogru"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="6"
                android:fontFamily="@font/googlesansmedium"
                android:hint="@string/dogru"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/yanlis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/googlesansmedium"
                android:hint="@string/yanlıs"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dogru" />

            <Switch
                android:id="@+id/secgec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:fontFamily="@font/googlesansmedium"
                android:text="@string/gecmis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yanlis"
                tools:checked="true" />

            <Button
                android:id="@+id/buton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesansmedium"
                android:text="@string/hesapla"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secgec" />

            <TextView
                android:id="@+id/net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/googlesansmedium"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <TextView
                android:id="@+id/netgecmis"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesansmedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/net" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/mat"
                android:layout_width="55dp"
                android:layout_height="62dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/netgecmis"
                app:srcCompat="@drawable/ic_delete_black_24dp" />

            <Button
                android:id="@+id/yedek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesansmedium"
                android:text="@string/yedekle"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/net"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buton"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/net"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yedek"></android.support.v7.widget.AppCompatSpinner>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
